@@ -1,3 +1,9 @@
+2018-02-16  Marek Polacek  <polacek@redhat.com>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/84192
+	* g++.dg/cpp1y/constexpr-84192.C: New test.
+
 2018-02-16  Martin Sebor  <msebor@redhat.com>
 
 	PR c++/79064
